# rns-stim-artifact-detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  main.py  pyproject.toml
src/: __init__.py  ablation_film.py  aggregate_reciprocal.py  build_bwh_catalog.py  build_neg_h5s.py  build_stim_catalog.py  build_stim_h5s.py  bwh_failure_analysis.py  bwh_plot_low_iou.py  cache_bwh_events.py  calibration_sensitivity.py  calibration_validity.py  comparison_methods.py  compute_class_balance.py  deployed_adapter.py  eval_bwh.py  eval_bwh_disabled_fp.py  eval_device_log_baseline.py  eval_flatline_baseline.py  eval_lgs.py  eval_seed_ensemble.py  m3_pilot.py  m3_retrain_lowthresh.py  meta_analysis.py  qc_disabled_iqr.py  stim_ablation.py  stim_detector.py  stim_detector_lib.py  stim_explainability.py  stim_inference.py  stim_mask_refiner.py  stim_metrics.py  unified_eval.py  utils.py
src/figures/: downstream_bias_lib.py  fig_downstream_bias.py  fig_metrics.py  fig_qualitative_spectrum.py  fig_reciprocal.py  fig_umap.py  make_contact_sheet.py  make_main_figures.py  style.py
tests/: test_calibration_sensitivity.py  test_calibration_validity.py  test_figure_style.py  test_meta_analysis.py
tests/figures/: test_downstream_bias_lib.py
